Prevent jumping when contract finishes

--- a/src/sass/app/trade.scss
+++ b/src/sass/app/trade.scss
@@ -530,8 +530,7 @@
                 padding: 0 10px;
 
                 > p {
-                    margin: auto 0 5px;
-                    padding-top: 10px;
+                    margin: auto 0 0;
                 }
             }
         }
